--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -133,15 +133,14 @@
     <Compile Include="HostnameChanger\Linux\LinuxHostName.cs" />
     <Compile Include="HostnameChanger\Mac\MacHostName.cs" />
     <Compile Include="HostnameChanger\Windows\WindowsHostName.cs" />
-    <Compile Include="PrinterManager\IPrinterManager.cs" />
-    <Compile Include="PrinterManager\Linux\LinuxPrinterManager.cs" />
-    <Compile Include="PrinterManager\Mac\MacPrinterManager.cs" />
+    <Compile Include="PrinterManager\PrintManagerBridge.cs" />
     <Compile Include="PrinterManager\Printers\LocalPrinter.cs" />
     <Compile Include="PrinterManager\Printers\iPrintPrinter.cs" />
     <Compile Include="PrinterManager\Printers\NetworkPrinter.cs" />
     <Compile Include="PrinterManager\Printers\Printer.cs" />
     <Compile Include="PrinterManager\DefaultPrinterManager.cs" />
     <Compile Include="PrinterManager\PrinterManager.cs" />
+    <Compile Include="PrinterManager\Unix\UnixPrinterManager.cs" />
     <Compile Include="PrinterManager\Windows\WindowsPrinterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnapinClient\SnapinClient.cs" />
