--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -124,9 +124,8 @@
     <Compile Include="DisplayManager\Windows\WindowsDisplay.cs" />
     <Compile Include="GreenFOG\GreenFOG.cs" />
     <Compile Include="GreenFOG\IGreen.cs" />
-    <Compile Include="GreenFOG\Linux\LinuxGreen.cs" />
-    <Compile Include="GreenFOG\Mac\MacGreen.cs" />
     <Compile Include="GreenFOG\Task.cs" />
+    <Compile Include="GreenFOG\Unix\UnixGreen.cs" />
     <Compile Include="GreenFOG\Windows\WindowsGreen.cs" />
     <Compile Include="HostnameChanger\HostnameChanger.cs" />
     <Compile Include="HostnameChanger\IHostName.cs" />
