--- a/NotificationGUI/packages.config
+++ b/NotificationGUI/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
+  <package id="MetroFramework" version="1.2.0.3" targetFramework="net4" />
+  <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net4" />
+  <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net4" />
+  <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net4" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net4" />
 </packages>
