--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -118,29 +118,33 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoLogOut\AutoLogOut.cs" />
+    <Compile Include="AutoLogOut\AutoLogOutMessage.cs" />
+    <Compile Include="GreenFOG\GreenFOGMessage.cs" />
     <Compile Include="GreenFOG\GreenFOG.cs" />
     <Compile Include="GreenFOG\IGreen.cs" />
     <Compile Include="GreenFOG\Task.cs" />
     <Compile Include="GreenFOG\Unix\UnixGreen.cs" />
     <Compile Include="GreenFOG\Windows\WindowsGreen.cs" />
+    <Compile Include="HostnameChanger\HostnameChangerMessage.cs" />
     <Compile Include="HostnameChanger\HostnameChanger.cs" />
     <Compile Include="HostnameChanger\IHostName.cs" />
     <Compile Include="HostnameChanger\Linux\LinuxHostName.cs" />
     <Compile Include="HostnameChanger\Mac\MacHostName.cs" />
     <Compile Include="HostnameChanger\Windows\WinActivation.cs" />
     <Compile Include="HostnameChanger\Windows\WindowsHostName.cs" />
-    <Compile Include="PrinterManager\Printers\CUPSPrinter.cs" />
+    <Compile Include="PrinterManager\DefaultPrinterMessage.cs" />
     <Compile Include="PrinterManager\PrintManagerBridge.cs" />
-    <Compile Include="PrinterManager\Printers\LocalPrinter.cs" />
-    <Compile Include="PrinterManager\Printers\iPrintPrinter.cs" />
-    <Compile Include="PrinterManager\Printers\NetworkPrinter.cs" />
-    <Compile Include="PrinterManager\Printers\Printer.cs" />
+    <Compile Include="PrinterManager\Printer.cs" />
     <Compile Include="PrinterManager\DefaultPrinterManager.cs" />
     <Compile Include="PrinterManager\PrinterManager.cs" />
+    <Compile Include="PrinterManager\PrinterMessage.cs" />
     <Compile Include="PrinterManager\Unix\UnixPrinterManager.cs" />
     <Compile Include="PrinterManager\Windows\WindowsPrinterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnapinClient\Snapin.cs" />
+    <Compile Include="SnapinClient\SnapinMessage.cs" />
     <Compile Include="SnapinClient\SnapinClient.cs" />
+    <Compile Include="TaskReboot\TaskRebootMessage.cs" />
     <Compile Include="TaskReboot\TaskReboot.cs" />
     <Compile Include="UserTracker\UserTracker.cs" />
   </ItemGroup>
