--- a/UniversalInstaller/App.config
+++ b/UniversalInstaller/App.config
@@ -9,6 +9,10 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MetroFramework" publicKeyToken="5f91a84759bf584a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.3" newVersion="1.2.0.3" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
