--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -91,12 +91,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Win32.TaskScheduler">
-      <HintPath>..\libs\Microsoft.Win32.TaskScheduler.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\libs\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="ProcessPrivileges">
       <HintPath>..\libs\ProcessPrivileges.dll</HintPath>
@@ -119,12 +115,16 @@
   <ItemGroup>
     <Compile Include="AutoLogOut\AutoLogOut.cs" />
     <Compile Include="AutoLogOut\AutoLogOutMessage.cs" />
+    <Compile Include="DisplayManager\Display.cs" />
+    <Compile Include="DisplayManager\DisplayManager.cs" />
+    <Compile Include="DisplayManager\DisplayMessage.cs" />
+    <Compile Include="DisplayManager\User_32.cs" />
+    <Compile Include="GreenFOG\CronNET\CronDaemon.cs" />
+    <Compile Include="GreenFOG\CronNET\CronJob.cs" />
+    <Compile Include="GreenFOG\CronNET\CronSchedule.cs" />
     <Compile Include="GreenFOG\GreenFOGMessage.cs" />
     <Compile Include="GreenFOG\GreenFOG.cs" />
-    <Compile Include="GreenFOG\IGreen.cs" />
     <Compile Include="GreenFOG\Task.cs" />
-    <Compile Include="GreenFOG\Unix\UnixGreen.cs" />
-    <Compile Include="GreenFOG\Windows\WindowsGreen.cs" />
     <Compile Include="HostnameChanger\HostnameChangerMessage.cs" />
     <Compile Include="HostnameChanger\HostnameChanger.cs" />
     <Compile Include="HostnameChanger\IHostName.cs" />
