--- a/Modules/packages.config
+++ b/Modules/packages.config
@@ -3,4 +3,5 @@
   <package id="Common.Logging" version="3.0.0" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net40" />
   <package id="Quartz" version="2.3.3" targetFramework="net40" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
